# cmall

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmall.service.in  compile_flags.txt  cross-with-clang-cl.sh  dmall.service.in  gen_msvc_sln.bat
cmake/: CheckCXXLinkerFlag.cmake  FileGroup.cmake  FindEmbed.cmake  Findiouring.cmake  Findlibgit2.cmake  Findodb.cmake  Findseccomp.cmake  odb.cmake
cmall/: CMakeLists.txt
cmall/include/: bundle_file.hpp  db_traits.hpp  fmt_extra.hpp  io_context_pool.hpp  jsonrpc.hpp  magic_enum.hpp  persist_map.hpp  sandbox.hpp  stdafx.hpp  traits-pgsql.hpp
cmall/include/beast/: fields_alloc.hpp
cmall/include/cmall/: client_connection.hpp  cmall.hpp  conversion.hpp  database.hpp  db.hpp  db.xml  db_traits.hpp  error_code.hpp  handler_type_check.hpp  http_last_modified.hpp  http_static_file_handle.hpp  internal.hpp  io.hpp  io_context_pool.hpp  js_util.hpp  logging.hpp  magic_enum.hpp  misc.hpp  myconcepts  rpc_defs.hpp  session.hpp  simple_http.hpp  socks_proxy.hpp  traits-pgsql.hpp  version.hpp  version.hpp.in
cmall/include/services/: gitea_service.hpp  merchant_git_repo.hpp  neteasesdk.hpp  payment_service.hpp  persist_session.hpp  repo_products.hpp  search_service.hpp  tencentsdk.hpp  userscript_service.hpp  verifycode.hpp  wxpay_service.hpp
cmall/include/utils/: async_connect.hpp  bitfield.hpp  coroyield.hpp  default_cert.hpp  fileop.hpp  handler_type_check.hpp  http_misc_helper.hpp  httpc.hpp  io.hpp  logging.hpp  misc.hpp  std_container_with_lock.hpp  time_clock.hpp  timedmap.hpp  uawaitable.hpp  url_parser.hpp
cmall/src/: cmall.cpp  conversion.cpp  database.cpp  default_cert.cpp  error_code.cpp  http_last_modified.cpp  http_static_file_handle.cpp  internal.cpp  io_context_pool.cpp  main.cpp  persist_map.cpp  sandbox.cpp  sandbox.hpp  selection_parser.hpp
cmall/src/cmall_impl/: cmall_do_http_server.cpp  cmall_do_websocket.cpp  handle_jsonrpc_admin_api.cpp  handle_jsonrpc_cart_api.cpp  handle_jsonrpc_fav_api.cpp  handle_jsonrpc_goods_api.cpp  handle_jsonrpc_merchant_api.cpp  handle_jsonrpc_misc_api.cpp  handle_jsonrpc_order_api.cpp  handle_jsonrpc_user_api.cpp  handle_order_wx_callback.cpp
cmall/src/services/: comma_kv_grammer.hpp  gitea_service.cpp  goods_md_metadata_grammer.hpp  goods_option_grammer.hpp  magic_vector.hpp  md_render.cpp  md_render.hpp  md_transpile.cpp  md_transpile.hpp  merchant_git_repo.cpp  neteasesdk.cpp  payment_service.cpp  persist_session.cpp  repo_products.cpp  search_service.cpp  tencentsdk.cpp  userscript_service.cpp  verifycode.cpp  wxpay_service.cpp
dmall/: CMakeLists.txt
dmall/include/dmall/: async_connect.hpp  database.hpp  db.hpp  db.xml  db_traits.hpp  dmall.hpp  handler_type_check.hpp  http_last_modified.hpp  internal.hpp  io_context_pool.hpp  misc.hpp  scoped_exit.hpp  simple_http.hpp  socks_proxy.hpp  time_clock.hpp  traits-pgsql.hpp  version.hpp.in
dmall/src/: database.cpp  default_cert.cpp  dmall.cpp  http_last_modified.cpp  internal.cpp  io_context_pool.cpp  main.cpp
doc/: api.md  pay.md  repos.md
incubator/: CMakeLists.txt
incubator/dirmon/: CMakeLists.txt  test.cpp
incubator/dirmon/include/dirmon/: change_notify.hpp  dirmon.hpp
incubator/dirmon/include/dirmon/linux/: fanotify_dirmon.hpp  inotify_dirmon.hpp
incubator/dirmon/include/dirmon/windows/: win_dirchange_read_handle.hpp  windows_dirmon.hpp
incubator/dirmon/src/: dirmon.cpp
incubator/gitpp/: CMakeLists.txt
incubator/gitpp/include/gitpp/: gitpp.hpp
incubator/gitpp/src/: gitpp.cpp
incubator/httpd/: CMakeLists.txt  README.md
incubator/httpd/include/httpd/: acceptor.hpp  header_decode.hpp  header_helper.hpp  http_misc_helper.hpp  http_stream.hpp  httpd.hpp  ssl_acceptor.hpp  unix_acceptor.hpp
incubator/httpd/include/httpd/detail/: async_map.hpp  concepts.hpp  wait_all.hpp
incubator/httpd/src/: header_decode.cpp  header_helper.cpp  http_misc_helper.cpp  httpd.cpp
misc-debug/: CMakeLists.txt  fake_gitea.cpp  sendsms_verify.cpp
odb_generated/: db-006-post.sql  db-006-pre.sql  db-007-post.sql  db-007-pre.sql  db-008-pre.sql  db-odb.hxx  db.sql
odb_generated/cmall/: db-009-post.sql  db-009-pre.sql  db-010-pre.sql  db-011-pre.sql  db-012-post.sql  db-012-pre.sql  db-013-post.sql  db-013-pre.sql  db-014-pre.sql  db-015-post.sql  db-015-pre.sql  db-016-pre.sql  db-017-pre.sql  db-018-pre.sql  db-019-post.sql  db-019-pre.sql  db-020-post.sql  db-020-pre.sql  db-021-pre.sql  db-022-post.sql  db-022-pre.sql  db-023-pre.sql  db-024-pre.sql  db-025-pre.sql  db-026-pre.sql  db-027-pre.sql  db-028-post.sql  db-028-pre.sql  db-029-post.sql  db-029-pre.sql  db-030-pre.sql  db-031-pre.sql  db-032-pre.sql  db-033-post.sql  db-033-pre.sql  db-034-pre.sql  db-035-pre.sql  db-036-post.sql  db-036-pre.sql  db-037-post.sql  (+5 more)
test/: CMakeLists.txt  test_decimal.cpp  test_key.h  test_rsa.cpp  test_wx.cpp
test/httpc/: test_http_client.cpp
